# libcache

./: CMakeLists.txt
CMakeModules/: FindCheck.cmake
include/: cache.h
src/: CMakeLists.txt  util.c
src/impl/: lru.c  naive.c  null.c
tests/: CMakeLists.txt  check_cache.c  main.c
